@@ -1,3 +1,6 @@
+2009-11-22 Harri Pitkänen <hatapitk@iki.fi>
+	* Remove unnecessary header hyphenator.hpp.
+
 2009-11-21 Harri Pitkänen <hatapitk@iki.fi>
 	* Add documentation for morphological analyzer.
 
